--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     padding: 0;
     box-sizing: border-box;
     font: -apple-system-body;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', 'Nanum Myeongjo', sans-serif;
 }
 
 /* Text Elements */
@@ -14,7 +14,8 @@ h1,h2 {
 h1 {
     font-size: 2em;
     margin-bottom: 20px;
-    font-family: 'EB Garamond', serif;
+    font-family: 'Nanum Myeongjo', serif;
+    /* letter-spacing: 2.5px; */
 }
 p {
     line-height:1.8;
@@ -28,7 +29,7 @@ a {
 
 /* Content Elements */
 body {
-    background: #fff;
+    background: #faf0e6;
     color: #000;
     text-align: center;
 }
@@ -43,21 +44,22 @@ img {
     max-width: 600px;
     height:auto;
 }
-.imageContainer {
+.headerImageContainer {
+    padding: 10px;
     position: relative;
-    width:400px; /* you can use % */
+    width: 100px;
     display: block;
     margin-left: auto;
     margin-right: auto;
 }
 .middleImageContainer {
     position: relative;
-    width: 500px; /* you can use % */
+    width: 370px; /* you can use % */
     margin-left: auto;
     margin-right: auto;
     display: grid;
     grid-template-columns: auto auto;
-    padding: 10px;
+    background-size: contain;
 }
 .grid-container {
     display: grid;
@@ -73,8 +75,12 @@ img {
 /* Content Elements */
 
 /* NitPicky Stylings */
-.poem {
+.greeting {
     line-height: 2;
+    font-size:0.8rem;
+    align:center;
+    padding: 10px;
+    font-family: 'Nanum Myeongjo', serif;
 }
 .suffix {
     font-size:0.9rem;
@@ -94,15 +100,21 @@ img {
     line-height:2;
 }
 #address {
-    color:#8a8a8a
+    color:#8a8a8a;
+    padding: 4px;
+}
+#shuttle {
+    color:#8a8a8a;
+    padding: 10px;
 }
 /* NitPicky Stylings */
 
 /* Dark Mode */
 @media (prefers-color-scheme: dark) {
     body {
-        background-color: #222;
-        color: #ddd;
+        background-color: #faf0e6;
+        color: #5a5949;
+        background-image: url("https://www.transparenttextures.com/patterns/cream-paper.png");
     }
 }
 
